# hs-cli

./: .travis.yml  README.md  changelog.md  hs-cli.cabal
test/: Spec.hs
test/Help/: HelpSpec.hs
test/Utils/: StringSpec.hs
