name:                hs-cli
version:             0.1.0
synopsis:            A simple framework for developing Command Line applications
homepage:            https://github.com/Miguel-Fontes/hs-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Miguel Fontes
maintainer:          miguel_m_fontes@hotmail.com
copyright:           2018 Miguel Fontes
category:            CLI
build-type:          Simple
extra-source-files:  README.md changelog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Help.Command
                     , Help.Printer
                     , Utils.String
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite hs-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-cli
                     , hspec
                     , QuickCheck
  other-modules:       Help.HelpSpec
                     , Utils.StringSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Miguel-Fontes/hs-cli
